--- a/app/src/main/res/layout/fragment_noticia.xml
+++ b/app/src/main/res/layout/fragment_noticia.xml
@@ -11,27 +11,48 @@
         android:layout_marginLeft="10dp"
         android:layout_marginRight="8dp">
 
+        <!-- Ubicación noticia -->
+        <TextView
+            android:id="@+id/ubicacionNoticia"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Ubicación noticia"
+            android:textStyle="bold"
+            android:layout_marginTop="8dp"
+            android:textSize="15sp" />
+
         <!-- Titular noticia -->
         <TextView
             android:id="@+id/titularNoticia"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="13dp"
-            android:textSize="20sp"
+            android:layout_marginTop="10dp"
+            android:textSize="23sp"
+            android:textStyle="bold"
             android:textColor="#000"/>
 
         <!-- Sección noticia -->
         <TextView
             android:id="@+id/seccionNoticia"
             android:layout_width="match_parent"
-            android:layout_height="25dp"
+            android:layout_height="30dp"
             android:text="@string/seccion"
             android:background="@drawable/bordes"
             android:layout_marginTop="20dp"
             android:layout_marginBottom="12dp"
-            android:textSize="13sp"
-            android:textColor="#212121"
+            android:textSize="15sp"
+            android:textColor="@color/colorPrimaryDark"
+            android:paddingTop="5dp"
+            android:paddingBottom="5dp"
             android:textStyle="italic"/>
+
+        <!-- Fecha y hora de la noticia -->
+        <TextView
+            android:id="@+id/fechahoraNoticia"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textColor="#000"
+            android:layout_marginBottom="10dp"/>
 
         <!-- Texto noticia -->
         <TextView
@@ -39,7 +60,9 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:typeface="serif"
-            android:textSize="15sp"
+            android:textSize="16sp"
+            android:layout_marginTop="3dp"
+            android:layout_marginBottom="30dp"
             android:lineSpacingMultiplier="1.3" />
 
     </LinearLayout>
