--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#b53f3f</color>
-    <color name="colorPrimaryDark">#db0000</color>
+    <color name="colorPrimaryDark">#990000</color>
+    <color name="colorPrimary">#b01a09</color>
     <color name="colorAccent">#FF4081</color>
 </resources>
